hard-gists/4361991/run.log
=== Docker Run Log for 4361991 ===
Started at: Mi 29. Okt 14:36:24 CET 2025

[2025-10-29 14:36:24] START: Running container for 4361991
[2025-10-29 14:36:25] SUCCESS: Container fb57b78c9ace7eb7eaae738d439ba0d99c8f83d9e23d448ff939bd9bea8cc901 started for 4361991
=== Container logs for 4361991 ===
  File "/snippet.py", line 65
    except Exception, e:
           ^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 4361991 ===
[2025-10-29 14:36:27] INFO: Container fb57b78c9ace7eb7eaae738d439ba0d99c8f83d9e23d448ff939bd9bea8cc901 has stopped
